Bug 92861 - AutoCorrect Options checkboxes do not work
Summary: AutoCorrect Options checkboxes do not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: highest major
Assignee: Noel Grandin
URL:
Whiteboard: target:5.1.0
Keywords: bibisectRequest, regression
: 92723 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-21 19:53 UTC by tommy27
Modified: 2016-10-25 19:21 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (160.44 KB, image/png)
2015-07-21 19:53 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2015-07-21 19:53:12 UTC
Created attachment 117371 [details]
screenshot

tested under Win8.1 x64 using LibO 5.1.0.0.alpha1+

Build ID: fcdddbd30a8b5cf6a5cc4d2ff28b7d4a20f8ec6b
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-07-20_02:07:48
Locale: en-US (it_IT)

STEPS TO REPRODUCE
1- open Writer
2- "Tools/AutoCorrect/AutoCorrect/Options" menu item
3- select the "Options" or the "Localized Options" tab
4- you cannot flag/unflag any of the checkboxes 

this is an important regression since it works fine in 4.4.5.1 

by the way the checkboxes in the "Exceptions" and "Word Completion" tabs do work
Comment 1 Regina Henschel 2015-07-22 20:55:59 UTC
I can confirm the bug for 5.1.0.0.alpha1+
Build ID: dad6be8af0e670a56d3d399a1b0a35859bd7b093
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-07-11_01:26:15
Locale: de-DE (de_DE)

It was OK in Version: 5.1.0.0.alpha1+
Build ID: 8cd2a372e3867f99b397b9ec089d6e1f7efd1088
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-21_10:44:17
Locale: de-DE (de_DE)
Comment 2 V Stuart Foote 2015-07-22 21:11:02 UTC
confirming with builds on hand

last good I have was
Version: 5.1.0.0.alpha1+ (x64)
Build ID: c18f11587d37f285a95447dd8996c8b605732e00
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-01_21:36:15
Locale: en-US (en_US)

but incorrect by
Version: 5.1.0.0.alpha1+
Build ID: a625cd702700ae1773966a3133d27027d1c4d083
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-07_08:23:06
Locale: en-US (en_US)

So somewhere in http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=c18f11587d37f285a95447dd8996c8b605732e00..a625cd702700ae1773966a3133d27027d1c4d083
Comment 3 Carlos Rodriguez 2015-07-22 22:26:58 UTC
I can confirm on Debian 8 (jessie):

Version: 5.1.0.0.alpha1+
Build ID: 74d4168f8830f7bbec6b784c3fb774296d9adafa
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-07-22_06:14:00
Locale: es-ES (es_ES.UTF-8)

With space bar left column can be checked/unchecked but not right column. Tab or cursor keys not working for right column
Comment 4 V Stuart Foote 2015-07-23 01:54:03 UTC
Was good through the 2015-07-04 build, so puts it in the range http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=a551d82bfc3ddae2354d39c90e31ad6eefcd1617..a625cd702700ae1773966a3133d27027d1c4d083
Comment 5 Niklas Johansson 2015-07-25 00:25:48 UTC
I can still toggle the check-boxes with the keyboard (space), the problem with that is that I can not seem to reach the second column by keyboard but I guess that is a different bug. Clicking the check-box does not work as already noted above. 

I bisected the problem and it seems that it was introduced with the following commit: 
http://cgit.freedesktop.org/libreoffice/core/commit?id=e9c3583c2cc27fc88ee81047c236ec99dd51e8de

I have sent a mail to the author of the commit and asked him to have a closer look.
Comment 6 tommy27 2015-07-26 08:02:40 UTC
affects just the 5.1.x branch
is not present in 5.0.0.4 RC
Comment 7 Maxim Monastirsky 2015-07-30 12:08:34 UTC
*** Bug 92723 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2015-07-30 12:36:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=517e5d1e3339133c3a91d801fdb85f1d70057883

fix tdf#92861, AutoCorrect Options checkboxes do not work

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 10:29:36 UTC Comment hidden (obsolete)