fix tdf#92861, AutoCorrect Options checkboxes do not work

caused by commit e9c3583c2cc27fc88ee81047c236ec99dd51e8de
"improve the returnbyref loplugin"

Change-Id: Ib8703e06e2f150538cdffcd08deca9c841e824b4